Refractor and changed simulation policy